# CUDA_Pathtracer

./: CMakeLists.txt  Graphics.cpp  Graphics.h  Object3d.cpp  Object3d.h  RenderDriver.cpp  RenderDriver.h  Scene.cpp  Scene.h  main.cpp
kernels/: Camera.h  Material.h  Ray.h  RenderKernel.cu  RenderKernel.h  Sphere2.h  Triangle.cuh  Triangle.h  cutil_math.h
